# SC2AnonServerPy

./: .gitignore  CHANGELOG.md  CITATION.cff  CITATIONS.cff  README.md  anonymize_pb2.py  anonymize_pb2_grpc.py  anonymize_server.py  client.py  debugging_for_data.py  deprecated.py  grpc_client.py  grpc_sc2reader_client.py  grpc_sc2reader_client_functions.py  grpc_server.py  main.py  makefile  pyproject.toml  requirements.txt  settings.py  test.py  testing_pysc2.py
.github/workflows/: ci.yml  docker_images.yml
DEMOS/: 11506440_1566325313_1659022.SC2Replay  11506442_1566325325_3518172.SC2Replay  11506444_1566325371_6968137.SC2Replay  11506445_1566325422_2071357.SC2Replay  11506446_1566325366_8429955.SC2Replay  11506451_1566325439_628104.SC2Replay
DEMOS/Input/: 11506437_1566325283_230842.SC2Replay  11506441_1566325379_303033.SC2Replay  11506447_1566325368_1131716.SC2Replay  Echo-ER-Void.sc2replay  Ephemeron-LE-343.sc2replay  Eternal-Empire-LE-127.sc2replay  Kairos-Junction-LE-143.sc2replay  Moczary-ER-Void-2.sc2replay  Moczary-ER-Void.sc2replay  Port-Aleksander-LE-135.sc2replay  Port-Aleksander-LE-136.sc2replay  Simulacrum-LE-141.sc2replay
PACAnalyzer/: .gitignore  PACAnalysis.py  README.md  main.py  pacanalyzer.py
data_exploration/: debugging_for_data.py  testing_s2protocol.py
docker/: Dockerfile  Dockerfile.dev
proto/: anonymize.proto
src/sc2anonserverpy/: __init__.py  anonymize_pb2.py  grpc_client.py  grpc_server.py  settings.py
src/sc2anonserverpy/client_functions/: grpc_sc2reader_client_functions.py
src/sc2anonserverpy/grpc_functions/: anonymize_pb2.py  (+2 more)
