[project]
name = "sc2anonserverpy"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Kaszanas", email = "andrzej.bialecki94@gmail.com" }]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
