[project]
name = "sc2anonserverpy"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Kaszanas", email = "andrzej.bialecki94@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "grpcio-tools>=1.70.0",
    "grpcio>=1.70.0",
    "sc2reader>=1.8.0",
    "typer>=0.15.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "commitizen>=4.4.1",
    "pre-commit>=4.1.0",
    "ruff>=0.9.10",
]
